tests/baselines/reference/contextualTypedSpecialAssignment.errors.txt
tests/cases/conformance/salsa/mod.js(5,7): error TS7006: Parameter 'n' implicitly has an 'any' type.
tests/cases/conformance/salsa/test.js(52,7): error TS7006: Parameter 'n' implicitly has an 'any' type.
tests/cases/conformance/salsa/test.js(70,7): error TS7006: Parameter 'n' implicitly has an 'any' type.


==== tests/cases/conformance/salsa/test.js (2 errors) ====
    /** @typedef {{
        status: 'done'
        m(n: number): void
    }} DoneStatus */
    
    // property assignment
    var ns = {}
    /** @type {DoneStatus} */
    ns.x = {
        status: 'done',
        m(n) { }
    }
    
    ns.x = {
        status: 'done',
        m(n) { }
    }
    ns.x
    
    
    // this-property assignment
    class Thing {
        constructor() {
            /** @type {DoneStatus} */
            this.s = {
                status: 'done',
                m(n) { }
            }
        }
    
        fail() {
            this.s = {
                status: 'done',
                m(n) { }
            }
        }
    }
    
    // exports-property assignment
    
    /** @type {DoneStatus} */
    exports.x = {
        status: "done",
        m(n) { }
    }
    exports.x
    
    /** @type {DoneStatus} contextual typing is allowed, but module.exports.y: any.
    Guess it doesn't check the type tag? */
    module.exports.y = {
        status: "done",
        m(n) { }
          ~
!!! error TS7006: Parameter 'n' implicitly has an 'any' type.
    }
    module.exports.y
    
    // prototype-property assignment
    /** @type {DoneStatus} */
    Thing.prototype.x = {
        status: 'done',
        m(n) { }
    }
    Thing.prototype.x
    
    // prototype assignment
    function F() {
    }
    /** @type {DoneStatus} */
    F.prototype = {
        status: "done",
        m(n) { }
          ~
!!! error TS7006: Parameter 'n' implicitly has an 'any' type.
    }
    
==== tests/cases/conformance/salsa/mod.js (1 errors) ====
    // module.exports assignment
    /** @type {{ status: 'done' }} */
    module.exports = {
        status: "done",
        m(n) { }
          ~
!!! error TS7006: Parameter 'n' implicitly has an 'any' type.
    }
    